--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ImageTextExtractor"
-        tools:targetApi="31">
+        android:theme="@style/Theme.EventsDataGenerator"
+        tools:targetApi="34">
         <activity
-            android:name=".ui.view.MainActivity"
+            android:name="com.determinasian.eventsdatagenerator.ui.view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ImageTextExtractor">
+            android:theme="@style/Theme.EventsDataGenerator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
